# OpenUaExplorer

./: .gitattributes  .gitignore  BUILDING.md  LICENSE  README.md  build.ps1  build.sh
docs/: 404.html  (+6 more)
src/: CMakeLists.txt  appicons.h  application.cpp  application.h  appstyle.cpp  appstyle.h  apptheme.cpp  apptheme.h  fusionstyle.cpp  fusionstyle.h  itestdatapopulatable.h  macappstyle.cpp  macappstyle.h  macthemefactory.cpp  macthemefactory.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  ouaexp.rc.in  qlementineappstyle.cpp  qlementineappstyle.h  qlementinethemefactory.cpp  qlementinethemefactory.h  resources.qrc  testdata.h
src/app/: CMakeLists.txt  main.cpp  ouaexp.plist.in  ouaexp.rc.in  resources.qrc
src/app/res/: about.json
src/app/translations/: ouaexp_de.ts  ouaexp_ru.ts  ouaexp_zh_CN.ts
src/charting/: CMakeLists.txt  charttypes.h  chartviewfactory.cpp  chartviewfactory.h  ichartview.h
src/cmake/: cmake_uninstall.cmake.in  coverage.cmake  dependencies.cmake  install_linux.cmake  install_macos.cmake  install_windows.cmake  ouaexp_pch.h  pch.cmake  project_version.cmake  qlementine.cmake  qt.cmake  qtopcua.cmake  sources.cmake  target_linux.cmake  target_macos.cmake  target_windows.cmake  tests.cmake  tests_integration.cmake  tests_linux_dbus.cmake  tests_ui.cmake  tests_unit.cmake  ui_normalization.cmake  uninstall.cmake
src/cmake/dependencies/: openssl.cmake  qtkeychain.cmake
src/cmake/patches/: 0001-open62541-no-keepalive-read-without-a-session.patch  0002-open62541-plugin-null-dataencoding-on-historyread.patch  0003-open62541-plugin-certificate-errors-are-trust-decisions.patch  (+1 more)
src/core/: CMakeLists.txt  appsettings.cpp  appsettings.h  loggingcategories.cpp  loggingcategories.h  settingsstore.cpp  settingsstore.h  updatechecker.cpp  updatechecker.h  utils.cpp  utils.h
src/dialogs/: appbasedialog.cpp  appbasedialog.h  certificatetrustdialog.cpp  certificatetrustdialog.h  certificatetrustdialog.ui  connectiondialog.cpp  connectiondialog.h  connectiondialog.ui  dialogabout.cpp  dialogabout.h  dialogabout.ui  writevaluedialog.cpp  writevaluedialog.h  writevaluedialog.ui
src/modules/: CMakeLists.txt  addressspacemodule.cpp  addressspacemodule.h  attributemodule.cpp  attributemodule.h  dataaccessmodule.cpp  dataaccessmodule.h  eventsmodule.cpp  eventsmodule.h  referencemodule.cpp  referencemodule.h  servermodule.cpp  servermodule.h  servicecontext.cpp  servicecontext.h  servicemodule.h  servicemodulemanager.cpp  servicemodulemanager.h
src/opcua/: attributeformatter.cpp  attributeformatter.h  certificateinfo.cpp  certificateinfo.h  certificatetrustdecider.h  connectioncontroller.cpp  connectioncontroller.h  connectionprofile.h  connectionprofilestore.cpp  connectionprofilestore.h  connectionprofilevalidator.cpp  connectionprofilevalidator.h  endpointhistorystore.cpp  endpointhistorystore.h  opcuabackend.h  opcuaclientservice.cpp  opcuaclientservice.h  opcuatypes.h  pkimanager.cpp  pkimanager.h  qtopcuabackend.cpp  qtopcuabackend.h  secretstore.cpp  secretstore.h
src/plugins/: CMakeLists.txt  addressspacemodule.cpp  addressspacemodule.h  addressspaceplugin.cpp  addressspaceplugin.h  attributemodule.cpp  attributeplugin.h  dataaccessmodule.cpp  dataaccessmodule.h  dataaccessplugin.cpp  eventsmodule.cpp  eventsmodule.h  plugincontext.h  pluginmanager.h  referencemodule.cpp  referencemodule.h  referenceplugin.cpp  servermodule.cpp  servermodule.h  servicecontext.cpp  servicemodule.h  servicemodulemanager.cpp  servicemodulemanager.h
src/tests/: CMakeLists.txt  opcuatestserver.h  test_addressspacemodel.cpp  test_addressspacewidget.cpp  test_appcolors.cpp  test_application.cpp  test_appsettings.cpp  test_attributeformatter.cpp  test_attributeswidget.cpp  test_callmethoddialog.cpp  test_certificatedetailsdialog.cpp  test_certificatedetailswidget.cpp  test_certificatesdialog.cpp  test_certificatesummarywidget.cpp  test_connectioncontroller.cpp  test_connectioncoordinator.cpp  test_connectiondata.cpp  test_connectiondialog.cpp  test_dataaccesscoordinator.cpp  test_dataaccessmonitoringstate.cpp  test_dataaccesswidget.cpp  test_datahistorywidget.cpp  test_dataview.cpp  test_datetimeedit.cpp  test_dialogabout.cpp  test_dialogopcuainfo.cpp  test_durationformatter.cpp  test_endpointsettingsdialog.cpp  test_eventshistorywidget.cpp  test_eventswidget.cpp  test_features.cpp  test_fileexport.cpp  test_historycombobox.cpp  test_historywidget.cpp  test_logwidget.cpp  test_mainstatusbarwidget.cpp  test_mainwindow_session.cpp  test_mainwindow_theme.cpp  test_models.cpp  test_modules.cpp  (+22 more)
src/ui/: CMakeLists.txt  appcolors.h  appicons.h  application.cpp  application.h  appstyle.cpp  apptheme.cpp  apptheme.h  connectioncoordinator.cpp  connectioncoordinator.h  dataaccesscoordinator.cpp  dataaccesscoordinator.h  dataaccessmonitoringstate.cpp  dataaccessmonitoringstate.h  favoritescoordinator.cpp  favoritescoordinator.h  fileexport.cpp  fileexport.h  fusionstyle.cpp  macappstyle.cpp  macappstyle.h  macpalette.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  qlementineappstyle.cpp  sessioncoordinator.cpp  sessioncoordinator.h  startuparguments.cpp  startuparguments.h  themecoordinator.cpp  ui_resources.qrc
src/widgets/: addressspaceitem.h  addressspacemodel.cpp  addressspacemodel.h  addressspacewidget.cpp  addressspacewidget.h  addressspacewidget.ui  attributesmodel.cpp  attributesmodel.h  attributeswidget.cpp  attributeswidget.h  attributeswidget.ui  certificatesummarywidget.cpp  certificatesummarywidget.h  certificatesummarywidget.ui  coloredpushbutton.cpp  coloredpushbutton.h  columnalignmentstore.h  connectionstatuswidget.cpp  connectionstatuswidget.h  dataaccessitem.h  dataaccessmodel.cpp  dataaccessmodel.h  dataaccesswidget.cpp  dataaccesswidget.h  dataaccesswidget.ui  endpointdiscoverywidget.cpp  endpointdiscoverywidget.h  endpointmodel.cpp  endpointmodel.h  endpointselectorwidget.cpp  endpointselectorwidget.h  endpointselectorwidget.ui  eventsmodel.cpp  eventsmodel.h  fixedgap.cpp  fixedgap.h  headerview.cpp  headerview.h  historymodel.cpp  historymodel.h  (+39 more)
(+330 files in other folders)
